[package]
name = "postcode-nl"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alexander van Saase <avsaase at gmail dot com>"]
repository = "https://github.com/avsaase/postcode-nl"
readme = "README.md"
# documentation = "https://docs.rs/postcode-nl"
keywords = ["postcode", "netherlands"]
description = "Async client for the free Netherlands postcode API at https://postcode.tech"

[dependencies]
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
